# LoggingPlus

./: README.md  pyproject.toml
src/loggingplus/: __init__.py  core.py  example.py
tests/: __init__.py  test_version.py
